--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    padding: 1rem;
+    height: 100vh;
 }
