--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,3 +1,16 @@
+.fade-in {
+    animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 .modal {
     position: absolute;
     left: 0;
